Updated HTML layout with changes to radio buttons

--- a/contact-us.html
+++ b/contact-us.html
@@ -21,7 +21,8 @@
             <div class="d-flex  order-0">
                 <a class="navbar-brand" href="home.html"> <img src="Assets/Content/Images/shanti-logo.png"
                         alt="Shanthi Women Logo" class="logo-img"></a>
-                <button class="navbar-toggler text-dark border-0 mt-2" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                <button class="navbar-toggler text-dark border-0 mt-2" type="button" data-toggle="collapse"
+                    data-target="#collapsingNavbar">
                     <span class="navbar-toggler-icon text-dark"></span>
                 </button>
             </div>
@@ -42,10 +43,12 @@
                 </ul>
             </div>
             <span class="navbar-text  text-right order-1 order-lg-last">
-                <button class="donate-button-nav">Donate</button>
-                <div>
-                    <img src="Assets/Content/Images/btn_donate.png" width="100%" alt="">
-                </div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                    <button class="donate-button-nav" type="submit">Donate</button>
+                    <div>
+                        <img src="Assets/Content/Images/btn_donate.png" width="100%" alt="">
+                    </div>
+                </form>
             </span>
         </nav>
     </header>
@@ -104,12 +107,14 @@
         <div class="container footer-flex">
             <label>&copy; 2023 Shanthi Women. All rights reserve.</label>
             <div class="endalign">
-                <a href="https://facebook.com/shantiwomen" class="text-secondary me-2"><i class="bi bi-facebook h4"></i></a>
-                <a href="https://twitter.com/shantiwomen" class="text-secondary me-2"><i class="bi bi-twitter h4"></i></a>
+                <a href="https://facebook.com/shantiwomen" class="text-secondary me-2"><i
+                        class="bi bi-facebook h4"></i></a>
+                <a href="https://twitter.com/shantiwomen" class="text-secondary me-2"><i
+                        class="bi bi-twitter h4"></i></a>
                 <a href="info@shantiwomen.org" class="text-secondary"><i class="bi bi-instagram h4"></i></a>
             </div>
         </div>
-       
+
     </footer>
 </body>
 
