--- a/who-we-are.html
+++ b/who-we-are.html
@@ -42,10 +42,12 @@
                 </ul>
             </div>
             <span class="navbar-text  text-right order-1 order-lg-last">
-                <button class="donate-button-nav">Donate</button>
-                <div>
-                    <img src="Assets/Content/Images/btn_donate.png" width="100%" alt="">
-                </div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                    <button class="donate-button-nav" type="submit">Donate</button>
+                    <div>
+                        <img src="Assets/Content/Images/btn_donate.png" width="100%" alt="">
+                    </div>
+                </form>
             </span>
         </nav>
     </header>
