--- a/events.html
+++ b/events.html
@@ -42,10 +42,12 @@
                 </ul>
             </div>
             <span class="navbar-text  text-right order-1 order-lg-last">
-                <button class="donate-button-nav">Donate</button>
-                <div>
-                    <img src="Assets/Content/Images/btn_donate.png" width="100%" alt="">
-                </div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                    <button class="donate-button-nav" type="submit">Donate</button>
+                    <div>
+                        <img src="Assets/Content/Images/btn_donate.png" width="100%" alt="">
+                    </div>
+                </form>
             </span>
         </nav>
     </header>
@@ -61,20 +63,21 @@
                 the links below.</h3>
                 <div class="container-fluid">
                 <div class="row mt-4">
-                    <div class="col-lg-7 col-md-6 col-sm-12">
+                    <!-- <div class="col-lg-7 col-md-6 col-sm-12"> -->
+                        <div class="col-lg-12 col-md-12 col-sm-12">
                         <div>
-                            <div class="card card-event position-absolute">
+                            <!-- <div class="card card-event position-absolute">
                                
                                     <div class="event-date">18</div>
                                     <div class="event-month">july</div>
                                
-                            </div>
+                            </div> -->
                         </div>
                         <img src="Assets/Content/Images/ThankYou2023 .png" class="position-relative" alt="" width="100%">
-                        <label class="text-secondary h5 mt-3">Organized By : <label class="h4 pink-text">Nattasha</label>
+                        <label class="text-secondary h5 mt-3">Organized By : <label class="h4 pink-text">Shanthi Trust</label>
                         </label>
                     </div>
-                    <div class="col-lg-5 col-md-6 col-sm-12">
+                    <!-- <div class="col-lg-5 col-md-6 col-sm-12">
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-4">
                                 <div class="card card-event-gray">
@@ -119,7 +122,7 @@
 
                         </div>
                         <hr>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
